added notebook for event validation

--- a/tutorial/Free Input Task - Person Annotation in Video.ipynb
+++ b/tutorial/Free Input Task - Person Annotation in Video.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# CrowdTruth for Free Input Tasks: Person Annotation in Video\n",
     "\n",
-    "In this tutorial, we will apply CrowdTruth metrics to a **free input** crowdsourcing task for **Person Annotation** from **video fragments**. The workers were asked to watch a video of about 3-5 seconds and then add tags that are relevant for the people that appear in the video fragment. The task was executed on [FigureEight](https://www.figure-eight.com/).\n",
+    "In this tutorial, we will apply CrowdTruth metrics to a **free input** crowdsourcing task for **Person Annotation** from **video fragments**. The workers were asked to watch a video of about 3-5 seconds and then add tags that are relevant for the people that appear in the video fragment. The task was executed on [FigureEight](https://www.figure-eight.com/). For more crowdsourcing annotation task examples, click [here](https://raw.githubusercontent.com/CrowdTruth-core/tutorial/getting_started.md).\n",
     "\n",
     "To replicate this experiment, the code used to design and implement this crowdsourcing annotation template is available here: [template](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Free/template.html), [css](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Free/template.css), [javascript](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Free/template.js). \n",
     "\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "4023382276  data/person-video-free-input  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -733,240 +733,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1016,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1067,93 +833,93 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1855113</th>\n",
-       "      <td>43.60</td>\n",
+       "      <th>2171654</th>\n",
+       "      <td>79.217391</td>\n",
        "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.636597</td>\n",
-       "      <td>0.734697</td>\n",
-       "      <td>0.866475</td>\n",
-       "      <td>0.324769</td>\n",
-       "      <td>0.474289</td>\n",
-       "      <td>0.684750</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.025087</td>\n",
+       "      <td>0.104635</td>\n",
+       "      <td>0.239759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3587109</th>\n",
-       "      <td>15.40</td>\n",
+       "      <td>17.320000</td>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
        "      <td>25</td>\n",
-       "      <td>0.411768</td>\n",
-       "      <td>0.581163</td>\n",
-       "      <td>0.708524</td>\n",
-       "      <td>0.366236</td>\n",
-       "      <td>0.499577</td>\n",
-       "      <td>0.733092</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.089067</td>\n",
+       "      <td>0.204887</td>\n",
+       "      <td>0.434714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4316379</th>\n",
-       "      <td>36.76</td>\n",
+       "      <td>23.320000</td>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
        "      <td>25</td>\n",
-       "      <td>0.446025</td>\n",
-       "      <td>0.638058</td>\n",
-       "      <td>0.699036</td>\n",
-       "      <td>0.191752</td>\n",
-       "      <td>0.370894</td>\n",
-       "      <td>0.516999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.049273</td>\n",
+       "      <td>0.148899</td>\n",
+       "      <td>0.330915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5861591</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.162530</td>\n",
+       "      <td>0.284655</td>\n",
+       "      <td>0.570972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6339764</th>\n",
-       "      <td>79.28</td>\n",
+       "      <td>52.952381</td>\n",
        "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.176038</td>\n",
-       "      <td>0.423132</td>\n",
-       "      <td>0.416035</td>\n",
-       "      <td>0.231437</td>\n",
-       "      <td>0.387467</td>\n",
-       "      <td>0.597309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6367365</th>\n",
-       "      <td>53.08</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.508121</td>\n",
-       "      <td>0.668064</td>\n",
-       "      <td>0.760587</td>\n",
-       "      <td>0.280973</td>\n",
-       "      <td>0.436799</td>\n",
-       "      <td>0.643254</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.033095</td>\n",
+       "      <td>0.114312</td>\n",
+       "      <td>0.289517</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         duration  job  judgment  unit       wqs       wwa       wsa  \\\n",
-       "worker                                                                 \n",
-       "1855113     43.60    1        25    25  0.636597  0.734697  0.866475   \n",
-       "3587109     15.40    1        25    25  0.411768  0.581163  0.708524   \n",
-       "4316379     36.76    1        25    25  0.446025  0.638058  0.699036   \n",
-       "6339764     79.28    1        25    25  0.176038  0.423132  0.416035   \n",
-       "6367365     53.08    1        25    25  0.508121  0.668064  0.760587   \n",
+       "          duration  job  judgment  unit  wqs  wwa  wsa  wqs_initial  \\\n",
+       "worker                                                                \n",
+       "2171654  79.217391    1        23    23  NaN  NaN  NaN     0.025087   \n",
+       "3587109  17.320000    1        25    25  NaN  NaN  NaN     0.089067   \n",
+       "4316379  23.320000    1        25    25  NaN  NaN  NaN     0.049273   \n",
+       "5861591  35.000000    1         4     4  NaN  NaN  NaN     0.162530   \n",
+       "6339764  52.952381    1        21    21  NaN  NaN  NaN     0.033095   \n",
        "\n",
-       "         wqs_initial  wwa_initial  wsa_initial  \n",
-       "worker                                          \n",
-       "1855113     0.324769     0.474289     0.684750  \n",
-       "3587109     0.366236     0.499577     0.733092  \n",
-       "4316379     0.191752     0.370894     0.516999  \n",
-       "6339764     0.231437     0.387467     0.597309  \n",
-       "6367365     0.280973     0.436799     0.643254  "
+       "         wwa_initial  wsa_initial  \n",
+       "worker                             \n",
+       "2171654     0.104635     0.239759  \n",
+       "3587109     0.204887     0.434714  \n",
+       "4316379     0.148899     0.330915  \n",
+       "5861591     0.284655     0.570972  \n",
+       "6339764     0.114312     0.289517  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
