added dimensionality reduction notebooks

--- a/tutorial/Sparse Multiple Choice Task - Relation Extraction.ipynb
+++ b/tutorial/Sparse Multiple Choice Task - Relation Extraction.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "1933572756        94  data/relex-sparse-multiple-choice  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "897534790  {u'origin': 0.4, u'cause_of_death': 0.0, u'spo...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
        "Text(0,0.5,u'Sentences')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEKCAYAAAARnO4WAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAE/xJREFUeJzt3X2QZXV95/H3R8CHVYwP02aJMAwa\nHzKYBMwsEU2iEssiYHxYjYBrIll3p0xtQEncDVm2KqyuWUhqiTFxq3ZWXVwjmigkIRhBggxEFMOM\nDMjoQiKOtYTUMrM8KDExDHz3j3N607T9cHq6T9/u+b1fVV197r3nnN/3nrn1mdPnnPs9qSokSQe/\nx0y6AEnS6jDwJakRBr4kNcLAl6RGGPiS1AgDX5IaYeBLUiMMfElqhIEvSY04dNIFzLRhw4batGnT\npMuQpHVj586d+6pqasi8ayrwN23axI4dOyZdhiStG0m+MXReD+lIUiMMfElqhIEvSY0w8CWpEQa+\nJDVi1Kt0kuwBvgU8DOyvqi1jjidJmt9qXJb58qratwrjSJIW4CEdSWrE2IFfwGeS7EyydeSxJEkL\nGPuQzkuq6u4kzwCuTvK/qur6mTP0/xFsBdi4cePI5UjS/Dad+6mJjLvnglNXZZxR9/Cr6u7+9z3A\nHwInzDHPtqraUlVbpqYGtYOQJB2A0QI/yROTHD49DbwSuG2s8SRJCxvzkM73An+YZHqcS6rqyhHH\nkyQtYLTAr6o7gR8ea/2SpKXxskxJaoSBL0mNMPAlqREGviQ1wsCXpEYY+JLUCANfkhph4EtSIwx8\nSWqEgS9JjTDwJakRBr4kNcLAl6RGGPiS1AgDX5IaYeBLUiMMfElqhIEvSY0w8CWpEQa+JDXCwJek\nRhj4ktQIA1+SGmHgS1IjDHxJaoSBL0mNMPAlqREGviQ1wsCXpEYY+JLUCANfkhph4EtSI0YP/CSH\nJLk5yRVjjyVJmt9q7OG/HfjqKowjSVrAqIGf5EjgVOADY44jSVrc2Hv47wX+HfDIyONIkhYxWuAn\neRVwT1XtXGS+rUl2JNmxd+/escqRpOaNuYf/EuDVSfYAHwdOSvJ7s2eqqm1VtaWqtkxNTY1YjiS1\nbbTAr6pfraojq2oTcDrw2ap681jjSZIW5nX4ktSIQ1djkKraDmxfjbEkSXNzD1+SGmHgS1IjDHxJ\naoSBL0mNMPAlqREGviQ1wsCXpEYY+JLUCANfkhph4EtSIwx8SWqEgS9JjTDwJakRBr4kNcLAl6RG\nGPiS1AgDX5IaYeBLUiMMfElqhIEvSY0w8CWpEQa+JDXCwJekRhj4ktQIA1+SGmHgS1IjDHxJaoSB\nL0mNGBT4SZ6d5HH99MuSnJ3kKeOWJklaSUP38C8FHk7y/cAHgWOAS0arSpK04oYG/iNVtR94HfDe\nqjoHOGK8siRJK21o4D+U5AzgLcAV/XOHjVOSJGkMQwP/54ETgfdU1deTHAP83nhlSZJW2qFDZqqq\nryT5FWBj//jrwAULLZPk8cD1wOP6cT5ZVb+2vHIlSQdq6FU6Pw3sAq7sHx+X5PJFFvsOcFJV/TBw\nHHBykhctp1hJ0oEbekjnfOAE4H6AqtpFd6XOvKrzYP/wsP6nDqxMSdJyDQ38/VX1wKznFg3vJIck\n2QXcA1xdVV9caoGSpJUxNPBvS/Im4JAkz0nyO8DnF1uoqh6uquOAI4ETkrxg9jxJtibZkWTH3r17\nl1S8JGm4oYF/FnAs3XH5S4AHgHcMHaSq7ge2AyfP8dq2qtpSVVumpqaGrlKStERDr9L5NnBe/zNI\nkingoaq6P8kTgFcAFx5QlZKkZRt6lc7VM3vnJHlqkqsWWewI4NoktwI30R3Dv2KRZSRJIxm0hw9s\n6A/LAFBV9yV5xkILVNWtwPHLKU6StHIG99JJsnH6QZKj8RJLSVpXhu7hnwd8Lsl1/eOfALaOU5Ik\naQxDT9pemeSFwIuAAOdU1b5RK5Mkraihe/jQ9cS5t19mcxKq6vpxypIkrbRBgZ/kQuA0YDfwSP90\n0TVHkyStA0P38F8LPK+qvjNmMZKk8Qy9SudOvOGJJK1rQ/fwvw3sSnINXXsFAKrq7FGqkiStuKGB\nf3n/I0lap4Zelvnhvh/Oxqq6feSaJEkjGPOOV5KkNWS0O15JktaWUe94JUlaO4aetH3UHa+Asxlw\nxytJ0tqxnDtevX2soiRJK2/oHv6pVfWoO14l+RngE6NUJUlacUP38H914HOSpDVqwT38JD8FnAI8\nM8n7Zrz0ZGD/mIVJklbWYod07gZ2AK8Gds54/lvAOWMVJUlaeQsGflXdAtyS5JKqemiVapIkjWDo\nSdsTkpwPHN0vE6Cq6lljFSZJWllDA/+DdIdwdgIPj1eOJGksQwP/gar69KiVSJJGNTTwr03ym8Bl\nPLof/pdGqUqStOKGBv6P9r+3zHiugJNWthxJ0liG9sN/+diFSJLGNbQf/vcm+WCST/ePNyd567il\nSZJW0tDWChcDVwHf1z++A3jHGAVJksYxNPA3VNUfAI8AVNV+vDxTktaVoYH/t0meTn/TkyQvomuR\nLElaJ4ZepfNLwOXAs5PcAEwBbxitKknSiltwDz/JP0vyT/vr7V8K/Hu66/A/A9y1CvVJklbIYod0\n/hvwD/30i+lugPJ+4D5g20ILJjkqybVJvppkdxLvkCVJE7TYIZ1Dqurefvo0YFtVXQpcmmTXIsvu\nB365qr6U5HBgZ5Krq+ory6xZknQAFtvDPyTJ9H8KPwl8dsZri7VW/pvp1gtV9S3gq8AzD7RQSdLy\nLLaH/zHguiT7gL8D/hwgyfezhKt0kmwCjge+eEBVSpKWbbG99PckuQY4AvhMVVX/0mOAs4YMkORJ\nwKXAO6rqm3O8vhXYCrBx48YllP5om8791AEvuxx7Ljh1IuNK0lItellmVd04x3N3DFl5ksPowv6j\nVXXZPOvfRn8CeMuWLTXXPJKk5Rv6xaslSxK6G6d8taouGmscSdIwowU+8BLgZ4GTkuzqf04ZcTxJ\n0gKGftN2yarqc3T3vpUkrQFj7uFLktYQA1+SGmHgS1IjDHxJaoSBL0mNMPAlqREGviQ1wsCXpEYY\n+JLUCANfkhph4EtSIwx8SWqEgS9JjTDwJakRBr4kNcLAl6RGGPiS1AgDX5IaYeBLUiMMfElqhIEv\nSY0w8CWpEQa+JDXCwJekRhj4ktQIA1+SGmHgS1IjDHxJaoSBL0mNMPAlqREGviQ1wsCXpEYY+JLU\niNECP8mHktyT5LaxxpAkDTfmHv7FwMkjrl+StASjBX5VXQ/cO9b6JUlLc+ikC0iyFdgKsHHjxglX\noyE2nfupSZew6vZccOpExp3ktp7Ue9Z4Jn7Stqq2VdWWqtoyNTU16XIk6aA18cCXJK0OA1+SGjHm\nZZkfA74APC/JXUneOtZYkqTFjXbStqrOGGvdkqSl85COJDXCwJekRhj4ktQIA1+SGmHgS1IjDHxJ\naoSBL0mNMPAlqREGviQ1wsCXpEYY+JLUCANfkhph4EtSIwx8SWqEgS9JjTDwJakRBr4kNcLAl6RG\nGPiS1AgDX5IaYeBLUiMMfElqhIEvSY0w8CWpEQa+JDXCwJekRhj4ktQIA1+SGmHgS1IjDHxJaoSB\nL0mNMPAlqRGjBn6Sk5PcnuSvkpw75liSpIWNFvhJDgHeD/wUsBk4I8nmscaTJC1szD38E4C/qqo7\nq+ofgI8DrxlxPEnSAsYM/GcC/3vG47v65yRJE3DoiOvOHM/Vd82UbAW29g8fTHL7AuvcAOxbgdpW\nTC5cdJY1V/NA67Hu0Woe8O+8HGtyWx+kn+01WfMyt/XRQ8cZM/DvAo6a8fhI4O7ZM1XVNmDbkBUm\n2VFVW1amvNWxHmuG9Vn3eqwZrHs1rceaYeXqHvOQzk3Ac5Ick+SxwOnA5SOOJ0lawGh7+FW1P8kv\nAlcBhwAfqqrdY40nSVrYmId0qKo/Bf50BVc56NDPGrMea4b1Wfd6rBmsezWtx5phhepO1XedR5Uk\nHYRsrSBJjVhzgb9YO4Ykb0vy5SS7knxurXx7d2gbiSRvSFJJJn6lwIBtfWaSvf223pXkX02iztmG\nbOskb0zylSS7k1yy2jXOZcD2/q0Z2/qOJPdPos5ZNS1W88Yk1ya5OcmtSU6ZRJ2zDaj76CTX9DVv\nT3LkJOqcVdOHktyT5LZ5Xk+S9/Xv6dYkL1zyIFW1Zn7oTu5+DXgW8FjgFmDzrHmePGP61cCV66Hu\nfr7DgeuBG4Eta71m4Ezgdye9fQ+g7ucANwNP7R8/Yz3UPWv+s+gudFjTNdMdW/6FfnozsGc9bGvg\nE8Bb+umTgI+sgbp/AnghcNs8r58CfJruO04vAr641DHW2h7+ou0YquqbMx4+kTm+zDUBQ9tIvBv4\nDeDvV7O4eazX1hdD6v7XwPur6j6AqrpnlWucy1K39xnAx1alsvkNqbmAJ/fT38Mc37WZgCF1bwau\n6aevneP1VVdV1wP3LjDLa4D/WZ0bgackOWIpY6y1wB/UjiHJv0nyNbrwPHuValvIonUnOR44qqqu\nWM3CFjC09cXr+z8fP5nkqDleX21D6n4u8NwkNyS5McnJq1bd/Aa3GklyNHAM8NlVqGshQ2o+H3hz\nkrvorsg7a3VKW9CQum8BXt9Pvw44PMnTV6G25Vh2u5q1FviD2jFU1fur6tnArwD/YfSqFrdg3Uke\nA/wW8MurVtHihmzrPwE2VdUPAX8GfHj0qhY3pO5D6Q7rvIxuT/kDSZ4ycl2LGfTZ7p0OfLKqHh6x\nniGG1HwGcHFVHUl3yOEj/ed9kobU/U7gpUluBl4K/DWwf+zClmkpn6E5TfofZrZB7Rhm+Djw2lEr\nGmaxug8HXgBsT7KH7vjb5RM+cbvotq6q/1tV3+kf/nfgR1aptoUM+YzcBfxxVT1UVV8Hbqf7D2CS\nlvLZPp3JH86BYTW/FfgDgKr6AvB4ur4vkzTks313Vf3zqjoeOK9/7oHVK/GALDUfv9ukT1TMOilx\nKHAn3Z+z0ydbjp01z3NmTP80sGM91D1r/u1M/qTtkG19xIzp1wE3rodtDZwMfLif3kD3Z/DT13rd\n/XzPA/bQf0dmrddMdxLxzH76B/oAmmjtA+veADymn34P8K5Jb+++lk3Mf9L2VB590vYvlrz+Sb/B\nOd7UKcAddGfZz+ufexfw6n76t4HdwC66ky3zButaqnvWvBMP/IHb+j/32/qWfls/f9I1D6w7wEXA\nV4AvA6dPuuahnxG6Y+IXTLrWJWzrzcAN/WdkF/DKSdc8sO43AH/Zz/MB4HFroOaPAX8DPES3N/9W\n4G3A2/rXQ3dTqa/1n+slZ4jftJWkRqy1Y/iSpJEY+JLUCANfkhph4EtSIwx8SWqEga9lS3Je35Xy\n1r7T448e4HqOm2S3xSTHJvls36nya0n+43K+NZpkT5IN/fTn+9+bkrxpiev5J0k+2neJva3vEvuk\nA61L7TLwtSxJTgReBbywuhYMr+DR/T6W4ji666dXXZIn0N1z+YKqei7wg3RNuN6+Euuvqhf3k5uA\nJQV+X8P/qaofrKoX0F2f/dBy6kky6t3utDYZ+FquI4B91bdgqKp9VXU3QJIfSXJdkp1Jrpru7Nf3\nH78wyV/0e9M/nu5G9+8CTuv/SjgtyRP7HuE39f3WX9Mvf2aSy5JcmeQvk/zGdDF9H/QvJbklyTX9\nc3OuZ5Y3ATdU1Wf69/Ft4BeBf9uv4/wk75wxzm1JNvXTf9S/x91Jts61kZI82E9eAPx4/x7PSfLn\nSY6bMd8NSX5ojm3819MPqur26e2d5Of6v6xuSfKR/rmZvd6vSbKxf/7iJBcluRa4cOB20cFk0t8u\n82d9/wBPovuG5R3AfwVe2j9/GPB5YKp/fBp9f3e6bxr/l376FODP+ukzmdF/H/h14M399FP6MZ7Y\nz3cnXTvexwPfoOsxMkX318Ux/TJPW2g9s97HRcDb53h/9/XLnA+8c8bzt9E1lps5zhP655/eP94D\nbOinH+x/vwy4YsZ63gK8t59+LnO0CqH7y+ce4AvAf6JvLwIcS9cnaMOsOv6Ef+z1/i+BP+qnLwau\nAA4Zul38Obh+3MPXslTVg3RN1bYCe4HfT3ImXU+YFwBXJ9lF19V05l2FLut/76Q7zDGXVwLn9stv\npwv3jf1r11TVA1X193QtFI6m6y9yfXUN06iqewesZ1qYu/PgXB0KZzs7yS10N7Y5iqU1avsE8Kok\nh9GF88WzZ6iqXXQ38/hN4GnATUl+gO7GHZ+sqn39fNPv90Rg+i5fHwF+bOZ49Y9dOIdsFx1EPI6n\nZesDZDtdN9Av0+217gR2V9WJ8yw23YXzYeb/HAZ4fVXd/qgnu5PC35nx1PQ6Fgrt71rPLLvp7jg0\nc5xn0R2uuj/Jfh59CPTx/TwvoztvcWJVfTvJ9unXhuiXuZru5hZvBObsoNr/x3oZcFmSR+j+MnqI\nYe1xZ87ztzOmh2wXHUTcw9eyJHlekpl7tMfRHWK5HZjqT+qS5LAkxy6yum/RtZKedhVwVpL06zh+\nkeW/QNfj/Jh+/qctYT0fBX4sySv6eZ4AvA/4tf71PXS3nyPdvUSP6Z//HuC+PrifT/dXxlLeI3TN\nu94H3DRjL/3/S/KSJE/tpx9L17DsG3R3bHpj+ht3zHi/n6drsQzwL4DPzVPLUrev1jkDX8v1JODD\n6W4YfitdGJ1f3a3l3kB3cnC6k+KLF1gPdB05N0+ftKW7JeRhwK3pbuz87oUWrqq9dIeWLuvH/P3+\npUXXU1V/R3eP5POS3AHsozuJ+9F+lkuBp/WHP36B7ng3wJXAof17fzfdYZ2F3Ars70+yntOPvRP4\nJvA/5lnm2cB1/V9PNwM7gEurajdda9/r+vd7UT//2cDP9zX9LPNfabSk7av1z26Z0hySvJYuQF9e\nVd8Yeazvozsk9vyqemTMsdQ2A1+aoCQ/R7eX/ktV9YlJ16ODm4EvSY3wGL4kNcLAl6RGGPiS1AgD\nX5IaYeBLUiMMfElqxP8DCTGCgPqggaYAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x117f47fd0>"
+       "<matplotlib.figure.Figure at 0x11484a090>"
       ]
      },
      "metadata": {},
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "Name: unit_annotation_score, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "6336109     0.733078     0.785714     0.933008  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "Text(0,0.5,u'Workers')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1059,7 +1059,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEKCAYAAAAfGVI8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAFChJREFUeJzt3XuUZWV95vHvA3gNiDDdMAyxU4kD\nxg4ikIZRcBxcKkPwgllBLqMJRiftcjTR6JjVC51odGUNMxl1ZXJRGmEgWcp4iQTUnjTIoEwQgebW\nNBIGQlpAOtBIuGgyIvibP/YuLcvqrlPdvc+x6v1+1qpV5+yz93l/b1V3Pefdl3enqpAktWu3SRcg\nSZosg0CSGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1ziCQpMYZBJLUuD0mXcAoli1bVlNTU5MuQ5IW\nleuuu+6Bqlo+33qLIgimpqbYsGHDpMuQpEUlyTdGWc9dQ5LUOINAkhpnEEhS4wwCSWqcQSBJjRss\nCJI8K8nlSW5NckuSt/fL35/km0lu7L9OGKoGSdL8hjx99HHgXVV1fZK9gOuSXNq/9pGq+m8Dti1J\nGtFgQVBVW4At/eNHk9wKHDhUe5KkHTOWYwRJpoDDgav7RW9LsjHJuUn2GUcNkqS5DX5lcZI9gb8A\n3lFVjyT5KPBBoPrvHwLeOMd2q4HVACtWrBi6TEnapqk1X5xY25vPfMXgbQw6IkjyJLoQ+ERVfQ6g\nqu6rqieq6vvA2cBRc21bVWuralVVrVq+fN6pMiRJO2jIs4YCnAPcWlUfnrH8gBmr/TKwaagaJEnz\nG3LX0DHArwI3J7mxX3YGcFqSw+h2DW0G3jxgDZKkeQx51tBfA5njpXVDtSlJWjivLJakxhkEktQ4\ng0CSGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1ziCQpMYZBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMI\nJKlxBoEkNc4gkKTGGQSS1DiDQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxhkEktQ4g0CS\nGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1brAgSPKsJJcnuTXJLUne3i/fN8mlSW7vv+8zVA2SpPkN\nOSJ4HHhXVT0XeAHw1iQrgTXAZVV1EHBZ/1ySNCGDBUFVbamq6/vHjwK3AgcCJwLn96udD7xmqBok\nSfMbyzGCJFPA4cDVwP5VtQW6sAD2G0cNkqS5DR4ESfYE/gJ4R1U9soDtVifZkGTD1q1bhytQkho3\naBAkeRJdCHyiqj7XL74vyQH96wcA98+1bVWtrapVVbVq+fLlQ5YpSU0b8qyhAOcAt1bVh2e8dDFw\nev/4dOCioWqQJM1vjwHf+xjgV4Gbk9zYLzsDOBP4dJI3AXcBrx2wBknSPAYLgqr6ayDbePmlQ7Ur\nSVoYryyWpMYZBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS1DiDQJIaZxBI\nUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxhkEktQ4g0CSGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1\nziCQpMYZBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGDRYESc5Ncn+STTOWvT/J\nN5Pc2H+dMFT7kqTRjBQESV6bZK/+8XuTfC7JEfNsdh5w/BzLP1JVh/Vf6xZWriRpVxt1RPCfqurR\nJC8C/i1wPvDR7W1QVVcAD+5kfZKkgY0aBE/0318BfLSqLgKevINtvi3Jxn7X0T47+B6SpF1k1CD4\nZpKzgJOBdUmesoBtZ/oo8GzgMGAL8KFtrZhkdZINSTZs3bp1B5qSJI1i1D/mJwPrgeOr6iFgX+Dd\nC22squ6rqieq6vvA2cBR21l3bVWtqqpVy5cvX2hTkqQR7THfCkl2A66pqkOml1XVFrpP9AuS5IB+\nW4BfBjZtb31J0vDmDYKq+n6Sm5KsqKq7Rn3jJBcAxwLLktwDvA84NslhQAGbgTfvUNWSpF1m3iDo\nHQDckuQa4DvTC6vq1dvaoKpOm2PxOQsrT5I0tFGD4PcGrUKSNDEjBUFVfSXJzwAHVdWXkjwd2H3Y\n0iRJ4zDqlcW/AXwWOKtfdCDwl0MVJUkan1FPH30rcAzwCEBV3Q7sN1RRkqTxGTUIvltVj00/SbIH\n3Zk/kqRFbtQg+EqSM4CnJXk58Bng88OVJUkal1GDYA2wFbiZ7tz/dVX1nsGqkiSNzainjx5eVWfT\nTQsBQJJXVZWjAkla5EYdEZyd5HnTT5KcBrx3mJIkSeM06ojgJOCzSV4HvAj4NeC4waqSJI3NqBeU\n3ZnkVLprB+4Gjquqfxq0MknSWGw3CJLczI+eJrov3RXFVyehqg4dsjhJ0vDmGxG8cixVSJImZrtB\nUFXf6O9HsHHm/QgkSUvHvGcN9XcTuynJijHUI0kas8HuRyBJWhy8H4EkNW4h9yPYHziyX3RNVd0/\nXFmSpHEZ9X4EJwPXAK8FTqY7ffSkIQuTJI3HqLuG3gMcOT0KSLIc+BLdzWokSYvYqHMN7TZrV9C3\nFrCtJOkn2Kgjgr9Ksh64oH9+CrBumJIkSeM03xQT7wCuBM4AXkU34VyAtVV14fDlSZKGNt+I4KeB\nPwR+HtgIfJUuGK4auC5J0pjMN8XEfwRI8mRgFXA08Ea6+xM8VFUrhy9RkjSkUY8RPA14BrB3/3Uv\n3W0rJUmL3HzHCNYCvwA8ClxNt2vow1X1D2OoTZI0BvOdAroCeArw98A3gXuAh4YuSpI0PvMdIzg+\nSehGBUcD7wIOSfIgcFVVvW8MNUoSAFNrvjjpEpakeY8RVFUBm5I8BDzcf70SOAowCCRpkZvvGMFv\n0Y0EjgG+xw9PHT0XDxZL0pIw34hgim4+od+uqi3DlyNJGrftHiyuqndW1Wd3JASSnJvk/iSbZizb\nN8mlSW7vv++zI0VLknadISeOOw84ftayNcBlVXUQcFn/XJI0QYMFQVVdATw4a/GJwPn94/OB1wzV\nviRpNOOeSnr/6d1M/ff9xty+JGmWn9h7CiRZnWRDkg1bt26ddDmStGSNOwjuS3IAQP99m/c9rqq1\nVbWqqlYtX758bAVKUmvGHQQXA6f3j08HLhpz+5KkWQYLgiQX0F189pwk9yR5E3Am8PIktwMv759L\nkiZo1GmoF6yqTtvGSy8dqk1J0sL9xB4sliSNh0EgSY0zCCSpcQaBJDXOIJCkxhkEktQ4g0CSGmcQ\nSFLjDAJJapxBIEmNMwgkqXEGgSQ1brBJ5yQNa2rNFyfS7uYzXzGRdjUcRwSS1DiDQJIaZxBIUuMM\nAklqnEEgSY0zCCSpcQaBJDXOIJCkxhkEktQ4g0CSGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1ziCQ\npMYZBJLUOINAkhpnEEhS4wwCSWrcRG5en2Qz8CjwBPB4Va2aRB2SpAkFQe8lVfXABNuXJOGuIUlq\n3qRGBAVckqSAs6pq7ewVkqwGVgOsWLFihxuaWvPFHd52Z20+8xUTa1sayiT/T2kYkxoRHFNVRwC/\nBLw1yYtnr1BVa6tqVVWtWr58+fgrlKRGTCQIqure/vv9wIXAUZOoQ5I0gSBI8lNJ9pp+DBwHbBp3\nHZKkziSOEewPXJhkuv1PVtVfTaAOSRITCIKquhN4/rjblSTNzdNHJalxBoEkNc4gkKTGGQSS1DiD\nQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxk3yVpUaiDcOkbQQjggkqXEGgSQ1ziCQpMYZ\nBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS1DiDQJIaZxBIUuMMAklqnEEg\nSY3zxjQD8gYxkhYDRwSS1DiDQJIaZxBIUuMmEgRJjk9yW5I7kqyZRA2SpM7YgyDJ7sCfAL8ErARO\nS7Jy3HVIkjqTGBEcBdxRVXdW1WPA/wROnEAdkiQmEwQHAnfPeH5Pv0ySNAGTuI4gcyyrH1spWQ2s\n7p9+O8ltO9jeMuCBHdx2sWu17632G9rt+5Ltd/7LvKtsr+8/M0obkwiCe4BnzXj+08C9s1eqqrXA\n2p1tLMmGqlq1s++zGLXa91b7De32vdV+w67p+yR2DV0LHJTkZ5M8GTgVuHgCdUiSmMCIoKoeT/I2\nYD2wO3BuVd0y7jokSZ2JzDVUVeuAdWNqbqd3Ly1irfa91X5Du31vtd+wK3ahV/3YcVpJUkOcYkKS\nGrdkgmC+aSuSPCXJp/rXr04yNf4qd70R+v3OJF9PsjHJZUlGOp1sMRh1qpIkJyWpJEvirJJR+p3k\n5P73fkuST467xqGM8O99RZLLk9zQ/5s/YRJ17mpJzk1yf5JN23g9Sf57/3PZmOSIBTVQVYv+i+6g\n898CPwc8GbgJWDlrnf8AfKx/fCrwqUnXPaZ+vwR4ev/4LUuh36P2vV9vL+AK4GvAqknXPabf+UHA\nDcA+/fP9Jl33GPu+FnhL/3glsHnSde+ivr8YOALYtI3XTwD+F911Wi8Arl7I+y+VEcEo01acCJzf\nP/4s8NIkc13ctpjM2++quryq/rF/+jW66zaWglGnKvkg8F+B/zfO4gY0Sr9/A/iTqvoHgKq6f8w1\nDmWUvhfwjP7x3sxxjdJiVFVXAA9uZ5UTgT+rzteAZyY5YNT3XypBMMq0FT9Yp6oeBx4G/tlYqhvO\nQqfreBPdp4alYN6+JzkceFZVfWGchQ1slN/5wcDBSa5M8rUkx4+tumGN0vf3A69Pcg/dmYm/OZ7S\nJm6npu5ZKreqHGXaipGmtlhkRu5TktcDq4B/M2hF47PdvifZDfgI8IZxFTQmo/zO96DbPXQs3Qjw\n/yQ5pKoeGri2oY3S99OA86rqQ0leCPx53/fvD1/eRO3U37elMiIYZdqKH6yTZA+6YeP2hlqLwUjT\ndSR5GfAe4NVV9d0x1Ta0+fq+F3AI8OUkm+n2m168BA4Yj/pv/aKq+l5V/R1wG10wLHaj9P1NwKcB\nquoq4Kl0c/EsdSP9LdiWpRIEo0xbcTFwev/4JOB/V3+UZRGbt9/97pGz6EJgqewrhnn6XlUPV9Wy\nqpqqqim64yOvrqoNkyl3lxnl3/pf0p0kQJJldLuK7hxrlcMYpe93AS8FSPJcuiDYOtYqJ+Ni4Nf6\ns4deADxcVVtG3XhJ7BqqbUxbkeQDwIaquhg4h26YeAfdSODUyVW8a4zY7z8A9gQ+0x8bv6uqXj2x\noneREfu+5IzY7/XAcUm+DjwBvLuqvjW5qneNEfv+LuDsJL9Nt2vkDUvgAx9JLqDb1besP/7xPuBJ\nAFX1MbrjIScAdwD/CPz6gt5/CfyMJEk7YansGpIk7SCDQJIaZxBIUuMMAklqnEEgSY0zCDQ2ST6S\n5B0znq9P8vEZzz+U5J0LeL+pbc3GuIP17Z3kz5L8bf/1iST77MT7nZfkpP7xx5Os7B+fsQPv9Z5+\nJtGNSW5M8q92tC5pNoNA4/RV4Gj4wRQQy4BfmPH60cCVo7xRkt13ppBtbH8OcGdVPbuqnk13TvZ5\nO9POtKr691X19f7pgoKgnyrhlcARVXUo8DJ+dF6ZBeuvrpcAg0DjdSV9ENAFwCbg0ST7JHkK8Fzg\nhv7qyD9IsinJzUlOAUhybD/X/CeBm2e+cZKf6+egPzLJ7v321/afoN88wvb/EvhFutlKp30AeH6S\n5/TbfmHG+n+c5A3949/t29qUZO1cs9om+XKSVUnOBJ7Wf6r/RJIPJnn7jPV+P8lvzdr8AOCB6elB\nquqBqrq3X//IJF9NclOSa5LsleSpSf5H/7O7Icn0VcZvSPKZJJ8HLumXvXvGz+n3tvvb05LlpwKN\nTVXdm+TxJCvoAuEquhkSX0g3G+zGqnosya8AhwHPpxs1XJvkiv5tjgIOqaq/S39zoSTPoZuS+Ner\n6sYkq+kusT+yD5grk1wye/tZ5a0EbqyqJ2bU+0SSG+gCansTtv1xVX2gr+XP6T69f34bP4M1Sd5W\nVYf1608BnwP+sB8lndrXONMlwO8m+b/Al+juKfGVdNMsfAo4paquTfIM4J+At/dtPS/JzwOXJDm4\nf68XAodW1YNJjqObg+gouknLLk7y4n7KYzXEINC4TY8KjgY+TBcER9MFwVf7dV4EXND/Ub4vyVeA\nI4FHgGtm/RFfDlwE/EpV3dIvOw44dHr/PN0EgwcBj82x/bQw92yNo9yz4iVJfgd4OrAvcAvbCILZ\nqmpzkm+lmxNqf+CG2dNBVNW3k/wi8K/p5hD6VLq7c10HbKmqa/v1HgFI8iLgj/plf5PkG3TzDQFc\nWlXTky0e13/d0D/fk+7nZBA0xiDQuE0fJ3ge3a6hu+nmh3kEOLdfZ3t/fL8z6/nD/XscQ/cHeHr7\n36yq9TNXTHLsHNtPuwU4PMlu01MW95/QDwWuB1bwo7tSn9qv81TgT+nufnZ3kvdPv7YAH6ebLvuf\n88OfwY/oQ/HLdLOp3kw3geL1LDy8ZvY/wH+uqrMWWK+WGI8RaNyupNt18mBVPdF/On0m3S6Lq/p1\nrgBO6ff1L6e7Td8123i/x4DX0M28+O/6ZeuBtyR5EkCSg5P81PaKqqo76D4Zv3fG4vcCl1XVXcA3\ngJXp7n29N/0Ml/zwj/4DSfakm9l2Pt+brq13IXA83ahn/eyV+2MUM6eRPqyv52+Af5HkyH69vfqD\nwFcAr+uXHUwXYrfNUcd64I193SQ5MMl+I9SvJcYRgcbtZrr9/p+ctWzPqnqgf34hXTDcRPeJ93eq\n6u/7/d0/pqq+k+SVwKVJvkP3CXsKuL4/cLuVLizm80bgj9LNULs33bTHr+rbuDvJp4GNwO30u1Oq\n6qEkZ/d92NxvM5+1wMYk11fV6/rjIpcDD808RjHDnn1dzwQepzubaXW/3Sn9a0+jOz7wMroRysf6\nkcPjdDNwfnf2MeyquiTdVM1X9a99G3g9sJSmK9cInH1UmkN/AHod3S6mdQO3tRvdbp7XVtXtQ7Yl\nzcURgTSHqroNePbQ7aS7yOwLwIWGgCbFEYEkNc6DxZLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlx\n/x8OQKTSEeGm6QAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11a8e70d0>"
+       "<matplotlib.figure.Figure at 0x114533310>"
       ]
      },
      "metadata": {},
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "top_member_employee_of_org  7.951334e-01  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,15 +1265,6 @@
    "source": [
     "results[\"annotations\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
