--- a/tutorial/notebooks/Multiple Choice Task - Person Type Annotation in Video.ipynb
+++ b/tutorial/notebooks/Multiple Choice Task - Person Type Annotation in Video.ipynb
@@ -1629,7 +1629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JUDGMENTS OF LOW QUALITY 44606916 FOR VIDEO 1856509900:\n",
+      "JUDGMENTS OF LOW QUALITY WORKER 44606916 FOR VIDEO 1856509900:\n",
       "celebrity : 1\n",
       "\n",
       "ALL JUDGMENTS FOR VIDEO 1856509900\n",
@@ -1701,7 +1701,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JUDGMENTS OF LOW QUALITY 44606916 FOR VIDEO 1856509903:\n",
+      "JUDGMENTS OF LOW QUALITY WORKER 44606916 FOR VIDEO 1856509903:\n",
       "archeologist : 1\n",
       "\n",
       "ALL JUDGMENTS FOR VIDEO 1856509900\n",
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
        "43620110     0.637002     0.674885     0.943867  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,20 +2026,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JUDGMENTS OF HIGH QUALITY WORKER 15176395 FOR VIDEO 1856509908:\n",
+      "none : 1\n",
+      "\n",
+      "ALL JUDGMENTS FOR VIDEO 1856509908\n",
+      "none : 19\n",
+      "philosopher : 1\n"
+     ]
+    }
+   ],
    "source": [
     "work_judg = results[\"judgments\"][results[\"judgments\"][\"unit\"] == work_units.iloc[1]]\n",
     "\n",
     "print(\"JUDGMENTS OF HIGH QUALITY WORKER %d FOR VIDEO %d:\" % (work_id, work_units.iloc[1]))\n",
-    "for k, v in work_judg[work_judg[\"worker\"] == work_id][\"output.selected_answer\"].iloc[1].items():\n",
+    "for k, v in work_judg[work_judg[\"worker\"] == work_id][\"output.selected_answer\"].iloc[0].items():\n",
     "    if v > 0:\n",
     "        print(str(k) + \" : \" + str(v))\n",
     "\n",
-    "print(\"\\nALL JUDGMENTS FOR VIDEO %d\" % work_units.iloc[])\n",
+    "print(\"\\nALL JUDGMENTS FOR VIDEO %d\" % work_units.iloc[1])\n",
     "sorted_judg = sorted(\n",
-    "    results[\"units\"][\"output.selected_answer\"][work_units.iloc[0]].items(),\n",
+    "    results[\"units\"][\"output.selected_answer\"][work_units.iloc[1]].items(),\n",
     "    key=operator.itemgetter(1),\n",
     "    reverse=True)\n",
     "\n",
@@ -2064,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2311,7 @@
        "writer                                1000  5.708571e-02  8.579336e-02"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2309,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2353,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
